2006-02-15  Tor Lillqvist  <tml@novell.com>

	Enable building of scsolver with MSVC7.1:
	
	* source/inc/baselistener.hxx: Include cppu/macros.hxx to get
	SAL_CALL definition.

	* source/inc/baselistener.hxx
	* source/inc/listener.hxx: Add SAL_CALL to those methods which
	override methods that have the SAL_CALL decoration.

	* source/numeric/matrix.cxx: No #warning in MSVC. Use #warning
	only with gcc.

	* source/numeric/nlpqnewton.cxx: Use ::sqrt() instead of
	std::sqrt() with MSVC, where std::sqrt() causes compilation errors
	related to the complex sqrt() functions in STL.

2006-02-13  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpsimplex.hxx:
	* source/numeric/lpsimplex.cxx: added a new method to disable
	two-phase intial search to prevent nested infinite two-phase
	search loop.

	* workben/simplex_test.cxx: minor tweak.

	* workben/addon_pkg/Makefile_build: changed variable names.


2006-02-09  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/type.hxx: added descriptions for
	Equality enum.

	* source/numeric/lpmodel.cxx: added function comment for
	Model::getCostVector().

	* source/numeric/lpsimplex.cxx: modified to use temporary
	model object instead of the original one.  Also added new
	function (convertVarRange) to convert variable ranges into 
	constraint matrix so that the algirithm can make use of 
	the variable ranges which were previously just ignored
	(note: this function is not totally done yet!)


2006-01-30  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/*_test.cxx: moved to workben.

	* source/numeric/makefile.mk: declaration of TESTFILES
	removed.
	
	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/lpmodel.cxx: added setCostVector() method
	for settings multiple cost variables all at once.

	* workben/*_test.cxx: moved from source/numeric.

	* workben/Makefile: initial version added.
	
	* workben/addon_pkg/Makefile: removed unused DFLAG 
	variable.  Removed the copy source tree bit as it was