@@ -1,3 +1,9 @@
+2006-02-16  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/numeric/lpsimplex.cxx: fixed incorrect way to access element
+	in the first column of RHS matrix.  This error caused the two-phase 
+	search to go into an infinite loop.
+
 2006-02-15  Tor Lillqvist  <tml@novell.com>
 
 	Enable building of scsolver with MSVC7.1:
